--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -165,11 +165,23 @@ body {
     display: flex;
 }
 .cart_quantity_count{
-    margin-top: 16px;
-    /* background-color: red; */
-    margin-left: 27px;
+    /* margin-top: 16px;*/
+    /*background-color: red; */
+    /*margin-left: 27px;
     position: absolute;
-    font-size: 29px;
+    font-size: 29px;*/
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    background-color: #e74c3c;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 50%;
+    padding: 4px 8px;
+    min-width: 24px;
+    text-align: center;
+    pointer-events: none; /* so clicks pass through to cart icon */
 
 }
 .plantname_heading{
